# sts2-cli

./: .gitignore  AGENTS.md  CLAUDE.md  INTEGRATION_COMPLETE.md  README.md  debug_entropy.py  debug_episodes.py  debug_hang.py  debug_separated_nets.py  launch.py  learning.md  plan.json  plan.md  pyproject.toml  requirements-agent.txt  results.tsv  setup.sh  test_mod_integration.sh
.claude/: training_status.sh
.obsidian/: workspace.json
Sts2Headless/: Program.cs  RunSimulator.cs
agent/: README.md  auto_play.py  boss_retry.py  bug.md  card_scoring.py  collect_deck_stats.py  combat_env.py  combat_helper.py  coordinator.py  ctex_to_image.py  eval_rl.py  evaluate.py  extract_card_db.py  extract_pck.py  gen_boss_saves.py  learning_necrobinder_cn.md  learning_necrobinder_en.md  llm_agent.py  mc_rollout.py  rl_agent.py  scrape_card_db.py  state_encoder.py  strategic_play.py  strategy.py  train.py  train_deck_predictor.py  train_deck_predictor_v2.py  train_loop.py  validate_learning.py
docs/: demo.cast
localization_eng/: achievements.json  ancients.json  ascension.json  cards.json  characters.json  enchantments.json  encounters.json  events.json  gameplay_ui.json  main_menu_ui.json  monsters.json  potions.json  powers.json  relics.json  settings_ui.json
localization_zhs/: ancients.json  ascension.json  cards.json  characters.json  enchantments.json  encounters.json  epochs.json  events.json  gameplay_ui.json  main_menu_ui.json  monsters.json  potions.json  powers.json  relics.json  run_history.json  settings_ui.json
python/: demo.py  play.py  play_full_run.py  (+1 more)
(+87 files in other folders)
